# rust-joms

./: .gitignore  Cargo.toml  dev.Rocket.toml  diesel.toml
migrations/2024-08-29-004812_create_personal_information/: down.sql  up.sql
src/: lib.rs  models.rs  repositories.rs  schema.rs
src/routes/: mod.rs  personal_information.rs
