[package]
name = "joms"
version = "0.1.0"
edition = "2021"
default-run = "server"


[dependencies]
tokio = "1"
rocket = { version = "0.5", features = ["json"] }
rocket_db_pools = { version = "0.1", features = ["diesel_postgres"] }
diesel = { version = "2.1", features = ["chrono", "postgres", "64-column-tables"] }
diesel-async = { version = "0.4", features = ["postgres"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15.0"
argon2 = "0.5.3"
rand = "0.8"